--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
   ],
   "require": {
     "php": ">=5.6.0",
-    "illuminate/support": "^5.3 || ^6.0 || ^7.0",
-    "illuminate/routing": "^5.3 || ^6.0 || ^7.0",
+    "illuminate/support": "^5.3 || ^6.0 || ^7.0 || ^8.0",
+    "illuminate/routing": "^5.3 || ^6.0 || ^7.0 || ^8.0",
     "jimdo/prometheus_client_php": "^0.9.0"
   },
   "autoload": {
